--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -580,3 +580,7 @@ Apple HealthKit -> Vital SDK <-> User's app
 If your user is sharing Apple HealthKit data and some other provider, we highly recommend reading the data from the server. Finally even if it's only Apple HealthKit, we do extra calculations on the server side (e.g. sleep effiency). If you use `VitalHealthKit.read(resource:startDate:endDate:)` you will miss these values.
 
 </Note>
+
+#### vi) Sleep Data
+
+For Apple HealthKit we restrict the apps (or sources) from which we read sleep data. We do this because many third party apps will write their own version of sleep data to the device. For example, if you sleep with your Apple Watch and you have the [Pillow app](https://pillow.app) installed on your phone, there will be two instances of a sleep stored in Apple HealthKit. For the time being, the only apps we are accepting data from can be found [here](https://github.com/tryVital/vital-ios/blob/c815702fd2e01e32d9ca12bdd7066f1ca1370b7d/Sources/VitalHealthKit/HealthKit/Models/DataSource.swift).
