Missing notice for Flutter

--- a/docs/wearables/sdks/flutter.mdx
+++ b/docs/wearables/sdks/flutter.mdx
@@ -2,6 +2,11 @@
 title: "Flutter"
 ---
 
+<Note>
+  We strongly recommend reading the documentation for both native iOS and
+  Android. The Flutter SDK is a thin layer sitting on top of these SDKs.
+</Note>
+
 <Tip>
   Please check our [sample
   app](https://github.com/tryVital/vital-flutter/tree/main/example), that makes
