--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -178,7 +178,14 @@ When logging out a user, you should call:
 await VitalClient.shared.cleanUp()
 ```
 
-If you are using `VitalHealthKit`, [call this method instead](/wearables/sdks/ios#3-clean-up-1).
+Calling `cleanUp` does one thing:
+
+1. Prepare the SDK to be configured again (either with new API keys and / or another `userId`).
+
+<Warning>
+  If you are using `VitalHealthKit`, [call this method
+  instead](/wearables/sdks/ios#3-clean-up-1).
+</Warning>
 
 ## 5. VitalDevices
 
@@ -484,7 +491,7 @@ Internally this method will also call `VitalClient.shared.cleanUp()`.
 
 Calling `cleanUp` does this two things:
 
-1. Makes sure no more data will be synced between the device and our servers.
+1. Makes sure no more data will be synced between the device's Apple HealthKit and our servers.
 2. Prepare the SDK to be configured again (either with new API keys and / or another `userId`).
 
 Do notice that the data already synced is not deleted, nor is the user. To delete the data you need call the deregister provider method:
