--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -18,6 +18,15 @@ You can share your MyFitnessPal diary with Vital by locking your diary with key.
     />
 </Frame>
 
+  On mobile, head to **MyFitnessPal** > **More** > **Settings** > **Diary Settings** > **Diary Sharing**
+
+<Tabs>
+	<Tab title="more"><img src="/img/mfp-more.jpeg" className="w-1/3 block mx-auto" /></Tab>
+	<Tab title="settings"><img src="/img/mfp-settings.jpeg" className="w-1/3 block mx-auto" /></Tab>
+	<Tab title="diary settings"><img src="/img/mfp-diary-settings.jpeg" className="w-1/3 block mx-auto" /></Tab>
+	<Tab title="diary sharing"><img src="/img/mfp-diary-sharing.jpeg" className="w-1/3 block mx-auto" /></Tab>
+</Tabs>
+
 - Pick a key of your choice and save your changes.
 
 You can now use the key and your MyFitnessPal username when linking with vital via the widget or programatically.
