--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -9,23 +9,27 @@ You can now link MyFitnessPal accounts to Vital! You can do this with Vital Link
 ## Before Connecting
 
 You can share your MyFitnessPal diary with Vital by locking your diary with key.
-- Go to [your diary settings](https://www.myfitnesspal.com/account/diary-settings) and click **locked with key**.
-
-<Frame>
-    <img
-        src="/img/mfp-lock-diary.jpg"
-        className="w-100 block mx-auto"
-    />
-</Frame>
-
-  On mobile, head to **MyFitnessPal** > **More** > **Settings** > **Diary Settings** > **Diary Sharing**
-
+- Go to [your diary settings](https://www.myfitnesspal.com/account/diary-settings) and click **locked with key**.<br/>
+  On mobile, head to *MyFitnessPal > More > Settings > Diary Settings > Diary Sharing*.
 <Tabs>
-	<Tab title="more"><img src="/img/mfp-more.jpeg" className="w-1/3 block mx-auto" /></Tab>
-	<Tab title="settings"><img src="/img/mfp-settings.jpeg" className="w-1/3 block mx-auto" /></Tab>
-	<Tab title="diary settings"><img src="/img/mfp-diary-settings.jpeg" className="w-1/3 block mx-auto" /></Tab>
-	<Tab title="diary sharing"><img src="/img/mfp-diary-sharing.jpeg" className="w-1/3 block mx-auto" /></Tab>
+	<Tab title="web">
+		<Frame>
+		    <img
+			src="/img/mfp-lock-diary.jpg"
+			className="w-100 block mx-auto"
+		    />
+		</Frame>
+	</Tab>
+	<Tab title="mobile">
+		<Tabs>
+			<Tab title="more"><img src="/img/mfp-more.jpeg" className="w-1/3 block mx-auto" /></Tab>
+			<Tab title="settings"><img src="/img/mfp-settings.jpeg" className="w-1/3 block mx-auto" /></Tab>
+			<Tab title="diary settings"><img src="/img/mfp-diary-settings.jpeg" className="w-1/3 block mx-auto" /></Tab>
+			<Tab title="diary sharing"><img src="/img/mfp-diary-sharing.jpeg" className="w-1/3 block mx-auto" /></Tab>
+		</Tabs>
+	</Tab>
 </Tabs>
+
 
 - Pick a key of your choice and save your changes.
 
@@ -41,7 +45,7 @@ To connect your device with the _widget_, follow the link wizard ensuring and en
     className="w-2/5 block mx-auto"
   />
   <img
-    src="/img/mfp-link-widget.jpg"
+    src="/img/mfp-link-widget.png"
     className="w-2/5 block mx-auto"
   />
 </Frame>
