--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -23,16 +23,16 @@ You can share your MyFitnessPal diary with Vital by locking your diary with a ke
 	<Tab title="mobile">
 		<Tabs>
 			<Tab title="more">
-				<Frame type="glass"><img src="/img/mfp-more.jpeg" className="h-90 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-more.jpeg" className="w-1/2 block mx-auto" /></Frame>
 			</Tab>
 			<Tab title="settings">
-				<Frame type="glass"><img src="/img/mfp-settings.jpeg" className="h-90 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-settings.jpeg" className="w-1/2 block mx-auto" /></Frame>
 			</Tab>
 			<Tab title="diary settings">
-				<Frame type="glass"><img src="/img/mfp-diary-settings.jpeg" className="h-90 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-diary-settings.jpeg" className="w-1/2 block mx-auto" /></Frame>
 			</Tab>
 			<Tab title="diary sharing">
-				<Frame type="glass"><img src="/img/mfp-diary-sharing.jpeg" className="h-90 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-diary-sharing.jpeg" className="w-1/2 block mx-auto" /></Frame>
 			</Tab>
 		</Tabs>
 	</Tab>
@@ -47,17 +47,24 @@ You can now use the key and your MyFitnessPal username when linking with Vital v
 
 To connect your device with the _widget_, follow the link wizard ensuring and enter your username and key.
 
-<Frame>
-  <img
-    src="/img/my_fitness_pal_link_search.png"
-    className="w-1/3 block mx-auto"
-  />
-  <img
-    src="/img/mfp-link-widget.png"
-    className="w-1/3 block mx-auto"
-  />
-</Frame>
-
+<CardGroup cols={2}>
+	<Card>
+		<Frame type="glass">
+			  <img
+			    src="/img/my_fitness_pal_link_search.png"
+			    className="w-full block mx-auto"
+			  />
+		</Frame>
+	</Card>
+	<Card>
+		<Frame type="glass">
+			  <img
+			    src="/img/mfp-link-widget.png"
+			    className="w-full block mx-auto"
+			  />
+		</Frame>
+	</Card>
+</CardGroup>
 <br />
 
 Please note when linking programatically that the **password** required in the payload 
