fix mismatched images

--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -48,22 +48,18 @@ You can now use the key and your MyFitnessPal username when linking with Vital v
 To connect your device with the _widget_, follow the link wizard ensuring and enter your username and key.
 
 <CardGroup cols={2}>
-	<Card>
 		<Frame type="glass">
 			  <img
-			    src="/img/my_fitness_pal_link_search.png"
+			    src="/img/mfp-link-search.png"
 			    className="w-full block mx-auto"
 			  />
 		</Frame>
-	</Card>
-	<Card>
 		<Frame type="glass">
 			  <img
 			    src="/img/mfp-link-widget.png"
 			    className="w-full block mx-auto"
 			  />
 		</Frame>
-	</Card>
 </CardGroup>
 <br />
 
