--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -23,16 +23,16 @@ You can share your MyFitnessPal diary with Vital by locking your diary with a ke
 	<Tab title="mobile">
 		<Tabs>
 			<Tab title="more">
-				<Frame type="glass"><img src="/img/mfp-more.jpeg" className="w-1/2 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-more.jpeg" className="h-1/2 block mx-auto" /></Frame>
 			</Tab>
 			<Tab title="settings">
-				<Frame type="glass"><img src="/img/mfp-settings.jpeg" className="w-1/2 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-settings.jpeg" className="h-1/2 block mx-auto" /></Frame>
 			</Tab>
 			<Tab title="diary settings">
-				<Frame type="glass"><img src="/img/mfp-diary-settings.jpeg" className="w-1/2 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-diary-settings.jpeg" className="h-1/2 block mx-auto" /></Frame>
 			</Tab>
 			<Tab title="diary sharing">
-				<Frame type="glass"><img src="/img/mfp-diary-sharing.jpeg" className="w-1/2 block mx-auto" /></Frame>
+				<Frame type="glass"><img src="/img/mfp-diary-sharing.jpeg" className="h-1/2 block mx-auto" /></Frame>
 			</Tab>
 		</Tabs>
 	</Tab>
@@ -47,21 +47,10 @@ You can now use the key and your MyFitnessPal username when linking with Vital v
 
 To connect your device with the _widget_, follow the link wizard ensuring and enter your username and key.
 
-<CardGroup cols={2}>
-		<Frame type="glass">
-			  <img
-			    src="/img/mfp-link-search.png"
-			    className="w-full block mx-auto"
-			  />
-		</Frame>
-		<Frame type="glass">
-			  <img
-			    src="/img/mfp-link-widget.png"
-			    className="w-full block mx-auto"
-			  />
-		</Frame>
-</CardGroup>
-<br />
+<Frame type="glass">
+  <img src="/img/mfp-link-search.png" className="w-2/5 block mx-auto" />
+  <img src="/img/mfp-link-widget.png" className="w-2/5 block mx-auto" />
+</Frame>
 
 Please note when linking programatically that the **password** required in the payload 
 is the **locked key** you set in your [diary settings](https://www.myfitnesspal.com/account/diary-settings).
