update mintlify and fix styling

--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -47,10 +47,14 @@ You can now use the key and your MyFitnessPal username when linking with Vital v
 
 To connect your device with the _widget_, follow the link wizard ensuring and enter your username and key.
 
+<CardGroup>
 <Frame type="glass">
-  <img src="/img/mfp-link-search.png" className="w-1/2 block mx-auto" />
-  <img src="/img/mfp-link-widget.png" className="w-1/2 block mx-auto" />
+  <img src="/img/mfp-link-search.png" className="w-full block mx-auto" />
 </Frame>
+<Frame type="glass">
+  <img src="/img/mfp-link-widget.png" className="w-full block mx-auto" />
+</Frame>
+</CardGroup>
 
 Please note when linking programatically that the **password** required in the payload 
 is the **locked key** you set in your [diary settings](https://www.myfitnesspal.com/account/diary-settings).
