--- a/docs/api-reference/lab-testing/post-test.mdx
+++ b/docs/api-reference/lab-testing/post-test.mdx
@@ -16,7 +16,7 @@ data = client.LabTests.create_test(
   lab_id=5,
   method="testkit",
   sample_type="dried_blood_spot",
-  "markers"=[160],
+  markers=[160],
 )
 
 ```
